2003-05-21  Stephane Carrez  <stcarrez@nerim.fr>

	* configure.in: Check for bfd.h and dis-asm.h
	* configure: Rebuild.

2003-02-08  Stephane Carrez  <stcarrez@nerim.fr>

	* examples/Makefile.in (GNATLINK): Add flags to search the libraries.

2003-02-08  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/Makefile.in: Remove the lib-obj hack that I copied from
	GtkAda.

2003-02-08  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/Makefile.in (install_ali): Fix build in another directory.

2003-02-08  Stephane Carrez  <stcarrez@nerim.fr>

	* NEWS: Update.

2003-02-08  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-internal.ads: Fix -gnaty warnings.

2003-02-08  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfdc.c (bfd_read_symbols): Don't allocate the symbol
	table array, it's allocated by Ada code.
	(ada_bfd_asymbol_value): New function.
	(ada_bfd_asymbol_flags): New function.
	(ada_bfd_get_symtab_upper_bound): New function.

2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/Makefile.in (GNATFLAGS): Compile with -gnaty.
	* bfdada/bfd-internal.adb: Fix -gnaty warnings.
	* bfdada/bfd-sections.adb: Likewise.
	* bfdada/bfd-sections.ads: Likewise.
	* bfdada/bfd-symtab.adb: Likewise.
	* bfdada/bfd-symtab.ads: Likewise.
	* bfdada/bfd-thin-sections.ads: Likewise.
	* bfdada/bfd-thin-symtab.ads: Likewise.
	* bfdada/bfd-thin.ads: Likewise.
	* bfdada/bfd.adb: Likewise.
	* bfdada/bfd.ads: Likewise.

2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-symtab.adb (Is_Done): New function.
	(Current, Get_Iterator): Likewise.
	(Next): New procedure.
	(Open_Symbols): Fix symbol table creation.
	(Find_Nearest_Line): Fix passing of symbol table.
	(Get_Symbol): Return the symbol at the specified index.

2003-02-07  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd-symtab.ads (Is_Done): New function.
	(Current, Get_Iterator): Likewise.
	(Next): New procedure.
	(Symbol_Iterator): New record.
	(Get_Value, Get_Flags): Update import pragma.